# demo-ecommerce-agent

./: IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  gpu_race_demo.py  pyproject.toml  test_ecommerce_tools.py
orchestration_agent/: planning_agent.py
orchestration_agent/tools/ecommerce/: __init__.py  add_to_basket.py  checkout_basket.py  datastore.py  list_products.py  remove_from_basket.py  view_basket.py
